// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkspaceInitial render workspace initial page normally when theme is dark mode 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    style="min-height: 100vh;"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <figure
            class="euiImage euiImage--large"
          >
            <img
              alt="OpenSearch"
              class="euiImage__img"
              src="/ui/logos/opensearch_on_light.svg"
            />
          </figure>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
          style="width: 1200px;"
        >
          <div
            class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
            role="main"
            style="background-image: url(test-file-stub); background-size: 490px 380px; background-repeat: no-repeat;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h1
                  class="euiTitle euiTitle--large"
                >
                  Create a workspace to get started
                </h1>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="max-width: 730px;"
              >
                <div
                  class="euiText euiText--small"
                >
                  Welcome to OpenSearch! This interface supports you to easily explore, enrich and visualize your data with developer-friendly tools and powerful integrations for machine learning, data process, and more. To begin, create a workspace for your use case.
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
              >
                <a
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
                  data-test-subj="workspace-initial-button-openSearch"
                  href="https://docs.aws.amazon.com/opensearch-service/latest/developerguide/what-is.html"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="popout"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        Learn more from documentation
                      </div>
                    </span>
                  </span>
                </a>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h2
                  class="euiTitle euiTitle--medium"
                >
                  Create a workspace
                </h2>
                <div
                  class="euiText euiText--small"
                >
                  Organize projects by use case in a collaborative workspace
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsObservability"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Observability
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Gain visibility into your applications and infrastructure
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSecurityAnalytics"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Security Analytics
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Enhance your security posture with advanced analytics
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSearch"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Search
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Discover and query your data with ease
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsEssentials"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Essentials
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Just the basics for exploring and analyzing data
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small euiButton--fill"
                      data-test-subj="workspace-initial-card-createWorkspace-button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButtonContent__icon"
                          color="inherit"
                          data-euiicon-type="plus"
                        />
                        <span
                          class="euiButton__text"
                        >
                          Create Workspace
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                    style="max-width: 540px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        <span
                          data-euiicon-type="dashboardApp"
                        />
                          Explore live demo environment at
                         
                        <a
                          class="euiLink euiLink--primary"
                          href="https://playground.opensearch.org/"
                          rel="noreferrer"
                        >
                          playground.opensearch.org
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
            data-test-subj="workspace-initial-button-settingsAndSetup"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="gear"
              />
              <span
                class="euiButtonEmpty__text"
              >
                <div
                  class="euiText euiText--small"
                >
                  Settings and setup
                </div>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkspaceInitial render workspace initial page normally when user is dashboard admin 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    style="min-height: 100vh;"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <figure
            class="euiImage euiImage--large"
          >
            <img
              alt="OpenSearch"
              class="euiImage__img"
              src="/ui/logos/opensearch_on_light.svg"
            />
          </figure>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
          style="width: 1200px;"
        >
          <div
            class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
            role="main"
            style="background-image: url(test-file-stub); background-size: 490px 380px; background-repeat: no-repeat;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h1
                  class="euiTitle euiTitle--large"
                >
                  Create a workspace to get started
                </h1>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="max-width: 730px;"
              >
                <div
                  class="euiText euiText--small"
                >
                  Welcome to OpenSearch! This interface supports you to easily explore, enrich and visualize your data with developer-friendly tools and powerful integrations for machine learning, data process, and more. To begin, create a workspace for your use case.
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
              >
                <a
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
                  data-test-subj="workspace-initial-button-openSearch"
                  href="https://docs.aws.amazon.com/opensearch-service/latest/developerguide/what-is.html"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="popout"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        Learn more from documentation
                      </div>
                    </span>
                  </span>
                </a>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h2
                  class="euiTitle euiTitle--medium"
                >
                  Create a workspace
                </h2>
                <div
                  class="euiText euiText--small"
                >
                  Organize projects by use case in a collaborative workspace
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsObservability"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Observability
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Gain visibility into your applications and infrastructure
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSecurityAnalytics"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Security Analytics
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Enhance your security posture with advanced analytics
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSearch"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Search
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Discover and query your data with ease
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsEssentials"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Essentials
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Just the basics for exploring and analyzing data
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small euiButton--fill"
                      data-test-subj="workspace-initial-card-createWorkspace-button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButtonContent__icon"
                          color="inherit"
                          data-euiicon-type="plus"
                        />
                        <span
                          class="euiButton__text"
                        >
                          Create Workspace
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                    style="max-width: 540px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        <span
                          data-euiicon-type="dashboardApp"
                        />
                          Explore live demo environment at
                         
                        <a
                          class="euiLink euiLink--primary"
                          href="https://playground.opensearch.org/"
                          rel="noreferrer"
                        >
                          playground.opensearch.org
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
            data-test-subj="workspace-initial-button-settingsAndSetup"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="gear"
              />
              <span
                class="euiButtonEmpty__text"
              >
                <div
                  class="euiText euiText--small"
                >
                  Settings and setup
                </div>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkspaceInitial render workspace initial page normally when user is non dashboard admin 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    style="min-height: 100vh;"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <figure
            class="euiImage euiImage--large"
          >
            <img
              alt="OpenSearch"
              class="euiImage__img"
              src="/ui/logos/opensearch_on_light.svg"
            />
          </figure>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
          style="width: 1200px;"
        >
          <div
            class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
            role="main"
            style="background-image: url(test-file-stub); background-size: 490px 380px; background-repeat: no-repeat;"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h1
                  class="euiTitle euiTitle--large"
                >
                  Create a workspace to get started
                </h1>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
                style="max-width: 730px;"
              >
                <div
                  class="euiText euiText--small"
                >
                  Welcome to OpenSearch! This interface supports you to easily explore, enrich and visualize your data with developer-friendly tools and powerful integrations for machine learning, data process, and more. To begin, create a workspace for your use case.
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero eui-displayInline"
              >
                <a
                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
                  data-test-subj="workspace-initial-button-openSearch"
                  href="https://docs.aws.amazon.com/opensearch-service/latest/developerguide/what-is.html"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="popout"
                    />
                    <span
                      class="euiButtonEmpty__text"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        Learn more from documentation
                      </div>
                    </span>
                  </span>
                </a>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <h2
                  class="euiTitle euiTitle--medium"
                >
                  Create a workspace
                </h2>
                <div
                  class="euiText euiText--small"
                >
                  Organize projects by use case in a collaborative workspace
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsObservability"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Observability
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Gain visibility into your applications and infrastructure
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSecurityAnalytics"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Security Analytics
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Enhance your security posture with advanced analytics
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsSearch"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Search
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Discover and query your data with ease
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal euiCard--hasIcon"
                      style="width: 270px; height: 137px;"
                    >
                      <div
                        class="euiCard__top"
                      >
                        <span
                          class="euiCard__icon"
                          color="subdued"
                          data-euiicon-type="wsEssentials"
                        />
                      </div>
                      <div
                        class="euiCard__content"
                      >
                        <span
                          class="euiTitle euiTitle--small euiCard__title"
                          id="generated-idTitle"
                        >
                          Essentials
                        </span>
                        <div
                          class="euiText euiText--small euiCard__description"
                          id="generated-idDescription"
                        >
                          <p>
                            Just the basics for exploring and analyzing data
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiText euiText--small"
                      style="max-width: 340px;"
                    >
                      Contact your administrator to create a workspace or to be added to an existing one.
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                    style="max-width: 540px;"
                  >
                    <div
                      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        <span
                          data-euiicon-type="dashboardApp"
                        />
                          Explore live demo environment at
                         
                        <a
                          class="euiLink euiLink--primary"
                          href="https://playground.opensearch.org/"
                          rel="noreferrer"
                        >
                          playground.opensearch.org
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small euiButtonEmpty--flushLeft"
            data-test-subj="workspace-initial-button-settingsAndSetup"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="gear"
              />
              <span
                class="euiButtonEmpty__text"
              >
                <div
                  class="euiText euiText--small"
                >
                  Settings and setup
                </div>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
